[workspace]
members = [
    "examples/apigateway",
    "examples/apigatewaymanagement",
    "examples/applicationautoscaling",
    "examples/autoscaling",
    "examples/autoscalingplans",
    "examples/batch",
    "examples/ca-certs",
    "examples/cloudformation",
    "examples/cloudwatch",
    "examples/cloudwatchlogs",
    "examples/cognitoidentity",
    "examples/cognitoidentityprovider",
    "examples/cognitosync",
    "examples/config",
    "examples/custom_retries",
    "examples/dynamodb",
    "examples/ebs",
    "examples/ec2",
    "examples/ecr",
    "examples/ecs",
    "examples/eks",
    "examples/globalaccelerator",
    "examples/iam",
    "examples/iot",
    "examples/kinesis",
    "examples/kms",
    "examples/lambda",
    "examples/localstack",
    "examples/medialive",
    "examples/mediapackage",
    "examples/polly",
    "examples/qldb",
    "examples/rds",
    "examples/rdsdata",
    "examples/route53",
    "examples/s3",
    "examples/sagemaker",
    "examples/secretsmanager",
    "examples/sending-presigned-requests",
    "examples/ses",
    "examples/setting-timeouts",
    "examples/sitewise",
    "examples/snowball",
    "examples/sns",
    "examples/sqs",
    "examples/ssm",
    "examples/stepfunction",
    "examples/testing",
    "examples/tls",
    "examples/transcribestreaming",
    "examples/using-native-tls-instead-of-rustls",
    "sdk/accessanalyzer",
    "sdk/account",
    "sdk/acm",
    "sdk/acmpca",
    "sdk/alexaforbusiness",
    "sdk/amp",
    "sdk/amplify",
    "sdk/amplifybackend",
    "sdk/amplifyuibuilder",
    "sdk/apigateway",
    "sdk/apigatewaymanagement",
    "sdk/apigatewayv2",
    "sdk/appconfig",
    "sdk/appconfigdata",
    "sdk/appflow",
    "sdk/appintegrations",
    "sdk/applicationautoscaling",
    "sdk/applicationcostprofiler",
    "sdk/applicationdiscovery",
    "sdk/applicationinsights",
    "sdk/appmesh",
    "sdk/apprunner",
    "sdk/appstream",
    "sdk/appsync",
    "sdk/athena",
    "sdk/auditmanager",
    "sdk/autoscaling",
    "sdk/autoscalingplans",
    "sdk/aws-config",
    "sdk/aws-endpoint",
    "sdk/aws-http",
    "sdk/aws-hyper",
    "sdk/aws-sig-auth",
    "sdk/aws-sigv4",
    "sdk/aws-smithy-async",
    "sdk/aws-smithy-client",
    "sdk/aws-smithy-eventstream",
    "sdk/aws-smithy-http",
    "sdk/aws-smithy-http-tower",
    "sdk/aws-smithy-json",
    "sdk/aws-smithy-protocol-test",
    "sdk/aws-smithy-query",
    "sdk/aws-smithy-types",
    "sdk/aws-smithy-types-convert",
    "sdk/aws-smithy-xml",
    "sdk/aws-types",
    "sdk/backup",
    "sdk/backupgateway",
    "sdk/batch",
    "sdk/billingconductor",
    "sdk/braket",
    "sdk/budgets",
    "sdk/chime",
    "sdk/chimesdkidentity",
    "sdk/chimesdkmediapipelines",
    "sdk/chimesdkmeetings",
    "sdk/chimesdkmessaging",
    "sdk/cloud9",
    "sdk/cloudcontrol",
    "sdk/clouddirectory",
    "sdk/cloudformation",
    "sdk/cloudfront",
    "sdk/cloudhsm",
    "sdk/cloudhsmv2",
    "sdk/cloudsearch",
    "sdk/cloudsearchdomain",
    "sdk/cloudtrail",
    "sdk/cloudwatch",
    "sdk/cloudwatchevents",
    "sdk/cloudwatchlogs",
    "sdk/codeartifact",
    "sdk/codebuild",
    "sdk/codecommit",
    "sdk/codedeploy",
    "sdk/codeguruprofiler",
    "sdk/codegurureviewer",
    "sdk/codepipeline",
    "sdk/codestar",
    "sdk/codestarconnections",
    "sdk/codestarnotifications",
    "sdk/cognitoidentity",
    "sdk/cognitoidentityprovider",
    "sdk/cognitosync",
    "sdk/comprehend",
    "sdk/comprehendmedical",
    "sdk/computeoptimizer",
    "sdk/config",
    "sdk/connect",
    "sdk/connectcampaigns",
    "sdk/connectcontactlens",
    "sdk/connectparticipant",
    "sdk/costandusagereport",
    "sdk/costexplorer",
    "sdk/customerprofiles",
    "sdk/databasemigration",
    "sdk/databrew",
    "sdk/dataexchange",
    "sdk/datapipeline",
    "sdk/datasync",
    "sdk/dax",
    "sdk/detective",
    "sdk/devicefarm",
    "sdk/devopsguru",
    "sdk/directconnect",
    "sdk/directory",
    "sdk/dlm",
    "sdk/docdb",
    "sdk/drs",
    "sdk/dynamodb",
    "sdk/dynamodbstreams",
    "sdk/ebs",
    "sdk/ec2",
    "sdk/ec2instanceconnect",
    "sdk/ecr",
    "sdk/ecrpublic",
    "sdk/ecs",
    "sdk/efs",
    "sdk/eks",
    "sdk/elasticache",
    "sdk/elasticbeanstalk",
    "sdk/elasticinference",
    "sdk/elasticloadbalancing",
    "sdk/elasticloadbalancingv2",
    "sdk/elasticsearch",
    "sdk/elastictranscoder",
    "sdk/emr",
    "sdk/emrcontainers",
    "sdk/emrserverless",
    "sdk/eventbridge",
    "sdk/evidently",
    "sdk/finspace",
    "sdk/finspacedata",
    "sdk/firehose",
    "sdk/fis",
    "sdk/fms",
    "sdk/forecast",
    "sdk/forecastquery",
    "sdk/frauddetector",
    "sdk/fsx",
    "sdk/gamelift",
    "sdk/gamesparks",
    "sdk/glacier",
    "sdk/globalaccelerator",
    "sdk/glue",
    "sdk/grafana",
    "sdk/greengrass",
    "sdk/greengrassv2",
    "sdk/groundstation",
    "sdk/guardduty",
    "sdk/health",
    "sdk/healthlake",
    "sdk/honeycode",
    "sdk/iam",
    "sdk/identitystore",
    "sdk/imagebuilder",
    "sdk/inspector",
    "sdk/inspector2",
    "sdk/iot",
    "sdk/iot1clickdevices",
    "sdk/iot1clickprojects",
    "sdk/iotanalytics",
    "sdk/iotdataplane",
    "sdk/iotdeviceadvisor",
    "sdk/iotevents",
    "sdk/ioteventsdata",
    "sdk/iotfleethub",
    "sdk/iotjobsdataplane",
    "sdk/iotsecuretunneling",
    "sdk/iotsitewise",
    "sdk/iotthingsgraph",
    "sdk/iottwinmaker",
    "sdk/iotwireless",
    "sdk/ivs",
    "sdk/ivschat",
    "sdk/kafka",
    "sdk/kafkaconnect",
    "sdk/kendra",
    "sdk/keyspaces",
    "sdk/kinesis",
    "sdk/kinesisanalytics",
    "sdk/kinesisanalyticsv2",
    "sdk/kinesisvideo",
    "sdk/kinesisvideoarchivedmedia",
    "sdk/kinesisvideomedia",
    "sdk/kinesisvideosignaling",
    "sdk/kms",
    "sdk/lakeformation",
    "sdk/lambda",
    "sdk/lexmodelbuilding",
    "sdk/lexmodelsv2",
    "sdk/lexruntime",
    "sdk/lexruntimev2",
    "sdk/licensemanager",
    "sdk/lightsail",
    "sdk/location",
    "sdk/lookoutequipment",
    "sdk/lookoutmetrics",
    "sdk/lookoutvision",
    "sdk/m2",
    "sdk/machinelearning",
    "sdk/macie",
    "sdk/macie2",
    "sdk/managedblockchain",
    "sdk/marketplacecatalog",
    "sdk/marketplacecommerceanalytics",
    "sdk/marketplaceentitlement",
    "sdk/marketplacemetering",
    "sdk/mediaconnect",
    "sdk/mediaconvert",
    "sdk/medialive",
    "sdk/mediapackage",
    "sdk/mediapackagevod",
    "sdk/mediastore",
    "sdk/mediastoredata",
    "sdk/mediatailor",
    "sdk/memorydb",
    "sdk/mgn",
    "sdk/migrationhub",
    "sdk/migrationhubconfig",
    "sdk/migrationhubrefactorspaces",
    "sdk/migrationhubstrategy",
    "sdk/mobile",
    "sdk/mq",
    "sdk/mturk",
    "sdk/mwaa",
    "sdk/neptune",
    "sdk/networkfirewall",
    "sdk/networkmanager",
    "sdk/nimble",
    "sdk/opensearch",
    "sdk/opsworks",
    "sdk/opsworkscm",
    "sdk/organizations",
    "sdk/outposts",
    "sdk/panorama",
    "sdk/personalize",
    "sdk/personalizeevents",
    "sdk/personalizeruntime",
    "sdk/pi",
    "sdk/pinpoint",
    "sdk/pinpointemail",
    "sdk/pinpointsmsvoice",
    "sdk/pinpointsmsvoicev2",
    "sdk/polly",
    "sdk/pricing",
    "sdk/proton",
    "sdk/qldb",
    "sdk/qldbsession",
    "sdk/quicksight",
    "sdk/ram",
    "sdk/rbin",
    "sdk/rds",
    "sdk/rdsdata",
    "sdk/redshift",
    "sdk/redshiftdata",
    "sdk/redshiftserverless",
    "sdk/rekognition",
    "sdk/resiliencehub",
    "sdk/resourcegroups",
    "sdk/resourcegroupstagging",
    "sdk/robomaker",
    "sdk/route53",
    "sdk/route53domains",
    "sdk/route53recoverycluster",
    "sdk/route53recoverycontrolconfig",
    "sdk/route53recoveryreadiness",
    "sdk/route53resolver",
    "sdk/rum",
    "sdk/s3",
    "sdk/s3control",
    "sdk/s3outposts",
    "sdk/sagemaker",
    "sdk/sagemakera2iruntime",
    "sdk/sagemakeredge",
    "sdk/sagemakerfeaturestoreruntime",
    "sdk/sagemakerruntime",
    "sdk/savingsplans",
    "sdk/schemas",
    "sdk/secretsmanager",
    "sdk/securityhub",
    "sdk/serverlessapplicationrepository",
    "sdk/servicecatalog",
    "sdk/servicecatalogappregistry",
    "sdk/servicediscovery",
    "sdk/servicequotas",
    "sdk/ses",
    "sdk/sesv2",
    "sdk/sfn",
    "sdk/shield",
    "sdk/signer",
    "sdk/sms",
    "sdk/snowball",
    "sdk/snowdevicemanagement",
    "sdk/sns",
    "sdk/sqs",
    "sdk/ssm",
    "sdk/ssmcontacts",
    "sdk/ssmincidents",
    "sdk/sso",
    "sdk/ssoadmin",
    "sdk/ssooidc",
    "sdk/storagegateway",
    "sdk/sts",
    "sdk/support",
    "sdk/swf",
    "sdk/synthetics",
    "sdk/textract",
    "sdk/transcribe",
    "sdk/transcribestreaming",
    "sdk/transfer",
    "sdk/translate",
    "sdk/voiceid",
    "sdk/waf",
    "sdk/wafregional",
    "sdk/wafv2",
    "sdk/wellarchitected",
    "sdk/wisdom",
    "sdk/workdocs",
    "sdk/worklink",
    "sdk/workmail",
    "sdk/workmailmessageflow",
    "sdk/workspaces",
    "sdk/workspacesweb",
    "sdk/xray"
]