[workspace]
resolver = "2"
exclude = [
    "examples/webassembly",
    "examples/test-utils",
    "examples/lambda",
    "examples/cross_service",
    "examples/examples",
    "tests/webassembly",
    "tests/no-default-features",
    "tests/telemetry"
]
members = [
    "sdk/accessanalyzer",
    "sdk/account",
    "sdk/acm",
    "sdk/acmpca",
    "sdk/aiops",
    "sdk/amp",
    "sdk/amplify",
    "sdk/amplifybackend",
    "sdk/amplifyuibuilder",
    "sdk/apigateway",
    "sdk/apigatewaymanagement",
    "sdk/apigatewayv2",
    "sdk/appconfig",
    "sdk/appconfigdata",
    "sdk/appfabric",
    "sdk/appflow",
    "sdk/appintegrations",
    "sdk/applicationautoscaling",
    "sdk/applicationcostprofiler",
    "sdk/applicationdiscovery",
    "sdk/applicationinsights",
    "sdk/applicationsignals",
    "sdk/appmesh",
    "sdk/apprunner",
    "sdk/appstream",
    "sdk/appsync",
    "sdk/apptest",
    "sdk/arczonalshift",
    "sdk/artifact",
    "sdk/athena",
    "sdk/auditmanager",
    "sdk/autoscaling",
    "sdk/autoscalingplans",
    "sdk/aws-config",
    "sdk/aws-credential-types",
    "sdk/aws-endpoint",
    "sdk/aws-http",
    "sdk/aws-hyper",
    "sdk/aws-runtime",
    "sdk/aws-runtime-api",
    "sdk/aws-sig-auth",
    "sdk/aws-sigv4",
    "sdk/aws-smithy-async",
    "sdk/aws-smithy-cbor",
    "sdk/aws-smithy-checksums",
    "sdk/aws-smithy-client",
    "sdk/aws-smithy-compression",
    "sdk/aws-smithy-eventstream",
    "sdk/aws-smithy-experimental",
    "sdk/aws-smithy-http",
    "sdk/aws-smithy-http-auth",
    "sdk/aws-smithy-http-client",
    "sdk/aws-smithy-http-tower",
    "sdk/aws-smithy-json",
    "sdk/aws-smithy-mocks",
    "sdk/aws-smithy-mocks-experimental",
    "sdk/aws-smithy-observability",
    "sdk/aws-smithy-observability-otel",
    "sdk/aws-smithy-protocol-test",
    "sdk/aws-smithy-query",
    "sdk/aws-smithy-runtime",
    "sdk/aws-smithy-runtime-api",
    "sdk/aws-smithy-types",
    "sdk/aws-smithy-types-convert",
    "sdk/aws-smithy-wasm",
    "sdk/aws-smithy-xml",
    "sdk/aws-types",
    "sdk/b2bi",
    "sdk/backup",
    "sdk/backupgateway",
    "sdk/backupsearch",
    "sdk/batch",
    "sdk/bcmdataexports",
    "sdk/bcmpricingcalculator",
    "sdk/bedrock",
    "sdk/bedrockagent",
    "sdk/bedrockagentruntime",
    "sdk/bedrockdataautomation",
    "sdk/bedrockdataautomationruntime",
    "sdk/bedrockruntime",
    "sdk/billing",
    "sdk/billingconductor",
    "sdk/braket",
    "sdk/budgets",
    "sdk/chatbot",
    "sdk/chime",
    "sdk/chimesdkidentity",
    "sdk/chimesdkmediapipelines",
    "sdk/chimesdkmeetings",
    "sdk/chimesdkmessaging",
    "sdk/chimesdkvoice",
    "sdk/cleanrooms",
    "sdk/cleanroomsml",
    "sdk/cloud9",
    "sdk/cloudcontrol",
    "sdk/clouddirectory",
    "sdk/cloudformation",
    "sdk/cloudfront",
    "sdk/cloudfrontkeyvaluestore",
    "sdk/cloudhsm",
    "sdk/cloudhsmv2",
    "sdk/cloudsearch",
    "sdk/cloudsearchdomain",
    "sdk/cloudtrail",
    "sdk/cloudtraildata",
    "sdk/cloudwatch",
    "sdk/cloudwatchevents",
    "sdk/cloudwatchlogs",
    "sdk/codeartifact",
    "sdk/codebuild",
    "sdk/codecatalyst",
    "sdk/codecommit",
    "sdk/codeconnections",
    "sdk/codedeploy",
    "sdk/codeguruprofiler",
    "sdk/codegurureviewer",
    "sdk/codegurusecurity",
    "sdk/codepipeline",
    "sdk/codestarconnections",
    "sdk/codestarnotifications",
    "sdk/cognitoidentity",
    "sdk/cognitoidentityprovider",
    "sdk/cognitosync",
    "sdk/comprehend",
    "sdk/comprehendmedical",
    "sdk/computeoptimizer",
    "sdk/config",
    "sdk/connect",
    "sdk/connectcampaigns",
    "sdk/connectcampaignsv2",
    "sdk/connectcases",
    "sdk/connectcontactlens",
    "sdk/connectparticipant",
    "sdk/controlcatalog",
    "sdk/controltower",
    "sdk/costandusagereport",
    "sdk/costexplorer",
    "sdk/costoptimizationhub",
    "sdk/customerprofiles",
    "sdk/databasemigration",
    "sdk/databrew",
    "sdk/dataexchange",
    "sdk/datapipeline",
    "sdk/datasync",
    "sdk/datazone",
    "sdk/dax",
    "sdk/deadline",
    "sdk/detective",
    "sdk/devicefarm",
    "sdk/devopsguru",
    "sdk/directconnect",
    "sdk/directory",
    "sdk/directoryservicedata",
    "sdk/dlm",
    "sdk/docdb",
    "sdk/docdbelastic",
    "sdk/drs",
    "sdk/dsql",
    "sdk/dynamodb",
    "sdk/dynamodbstreams",
    "sdk/ebs",
    "sdk/ec2",
    "sdk/ec2instanceconnect",
    "sdk/ecr",
    "sdk/ecrpublic",
    "sdk/ecs",
    "sdk/efs",
    "sdk/eks",
    "sdk/eksauth",
    "sdk/elasticache",
    "sdk/elasticbeanstalk",
    "sdk/elasticloadbalancing",
    "sdk/elasticloadbalancingv2",
    "sdk/elasticsearch",
    "sdk/elastictranscoder",
    "sdk/emr",
    "sdk/emrcontainers",
    "sdk/emrserverless",
    "sdk/entityresolution",
    "sdk/eventbridge",
    "sdk/evidently",
    "sdk/evs",
    "sdk/finspace",
    "sdk/finspacedata",
    "sdk/firehose",
    "sdk/fis",
    "sdk/fms",
    "sdk/forecast",
    "sdk/forecastquery",
    "sdk/frauddetector",
    "sdk/freetier",
    "sdk/fsx",
    "sdk/gamelift",
    "sdk/gameliftstreams",
    "sdk/geomaps",
    "sdk/geoplaces",
    "sdk/georoutes",
    "sdk/glacier",
    "sdk/globalaccelerator",
    "sdk/glue",
    "sdk/grafana",
    "sdk/greengrass",
    "sdk/greengrassv2",
    "sdk/groundstation",
    "sdk/guardduty",
    "sdk/health",
    "sdk/healthlake",
    "sdk/iam",
    "sdk/identitystore",
    "sdk/imagebuilder",
    "sdk/inspector",
    "sdk/inspector2",
    "sdk/inspectorscan",
    "sdk/internetmonitor",
    "sdk/invoicing",
    "sdk/iot",
    "sdk/iotanalytics",
    "sdk/iotdataplane",
    "sdk/iotdeviceadvisor",
    "sdk/iotevents",
    "sdk/ioteventsdata",
    "sdk/iotfleethub",
    "sdk/iotfleetwise",
    "sdk/iotjobsdataplane",
    "sdk/iotmanagedintegrations",
    "sdk/iotsecuretunneling",
    "sdk/iotsitewise",
    "sdk/iotthingsgraph",
    "sdk/iottwinmaker",
    "sdk/iotwireless",
    "sdk/ivs",
    "sdk/ivschat",
    "sdk/ivsrealtime",
    "sdk/kafka",
    "sdk/kafkaconnect",
    "sdk/kendra",
    "sdk/kendraranking",
    "sdk/keyspaces",
    "sdk/keyspacesstreams",
    "sdk/kinesis",
    "sdk/kinesisanalytics",
    "sdk/kinesisanalyticsv2",
    "sdk/kinesisvideo",
    "sdk/kinesisvideoarchivedmedia",
    "sdk/kinesisvideomedia",
    "sdk/kinesisvideosignaling",
    "sdk/kinesisvideowebrtcstorage",
    "sdk/kms",
    "sdk/lakeformation",
    "sdk/lambda",
    "sdk/launchwizard",
    "sdk/lexmodelbuilding",
    "sdk/lexmodelsv2",
    "sdk/lexruntime",
    "sdk/lexruntimev2",
    "sdk/licensemanager",
    "sdk/licensemanagerlinuxsubscriptions",
    "sdk/licensemanagerusersubscriptions",
    "sdk/lightsail",
    "sdk/location",
    "sdk/lookoutequipment",
    "sdk/lookoutmetrics",
    "sdk/lookoutvision",
    "sdk/m2",
    "sdk/machinelearning",
    "sdk/macie2",
    "sdk/mailmanager",
    "sdk/managedblockchain",
    "sdk/managedblockchainquery",
    "sdk/marketplaceagreement",
    "sdk/marketplacecatalog",
    "sdk/marketplacecommerceanalytics",
    "sdk/marketplacedeployment",
    "sdk/marketplaceentitlement",
    "sdk/marketplacemetering",
    "sdk/marketplacereporting",
    "sdk/mediaconnect",
    "sdk/mediaconvert",
    "sdk/medialive",
    "sdk/mediapackage",
    "sdk/mediapackagev2",
    "sdk/mediapackagevod",
    "sdk/mediastore",
    "sdk/mediastoredata",
    "sdk/mediatailor",
    "sdk/medicalimaging",
    "sdk/memorydb",
    "sdk/mgn",
    "sdk/migrationhub",
    "sdk/migrationhubconfig",
    "sdk/migrationhuborchestrator",
    "sdk/migrationhubrefactorspaces",
    "sdk/migrationhubstrategy",
    "sdk/mpa",
    "sdk/mq",
    "sdk/mturk",
    "sdk/mwaa",
    "sdk/neptune",
    "sdk/neptunedata",
    "sdk/neptunegraph",
    "sdk/networkfirewall",
    "sdk/networkflowmonitor",
    "sdk/networkmanager",
    "sdk/networkmonitor",
    "sdk/notifications",
    "sdk/notificationscontacts",
    "sdk/oam",
    "sdk/observabilityadmin",
    "sdk/odb",
    "sdk/omics",
    "sdk/opensearch",
    "sdk/opensearchserverless",
    "sdk/opsworks",
    "sdk/opsworkscm",
    "sdk/organizations",
    "sdk/osis",
    "sdk/outposts",
    "sdk/panorama",
    "sdk/partnercentralselling",
    "sdk/paymentcryptography",
    "sdk/paymentcryptographydata",
    "sdk/pcaconnectorad",
    "sdk/pcaconnectorscep",
    "sdk/pcs",
    "sdk/personalize",
    "sdk/personalizeevents",
    "sdk/personalizeruntime",
    "sdk/pi",
    "sdk/pinpoint",
    "sdk/pinpointemail",
    "sdk/pinpointsmsvoice",
    "sdk/pinpointsmsvoicev2",
    "sdk/pipes",
    "sdk/polly",
    "sdk/pricing",
    "sdk/privatenetworks",
    "sdk/proton",
    "sdk/qapps",
    "sdk/qbusiness",
    "sdk/qconnect",
    "sdk/qldb",
    "sdk/qldbsession",
    "sdk/quicksight",
    "sdk/ram",
    "sdk/rbin",
    "sdk/rds",
    "sdk/rdsdata",
    "sdk/redshift",
    "sdk/redshiftdata",
    "sdk/redshiftserverless",
    "sdk/rekognition",
    "sdk/repostspace",
    "sdk/resiliencehub",
    "sdk/resourceexplorer2",
    "sdk/resourcegroups",
    "sdk/resourcegroupstagging",
    "sdk/robomaker",
    "sdk/rolesanywhere",
    "sdk/route53",
    "sdk/route53domains",
    "sdk/route53profiles",
    "sdk/route53recoverycluster",
    "sdk/route53recoverycontrolconfig",
    "sdk/route53recoveryreadiness",
    "sdk/route53resolver",
    "sdk/rum",
    "sdk/s3",
    "sdk/s3control",
    "sdk/s3outposts",
    "sdk/s3tables",
    "sdk/sagemaker",
    "sdk/sagemakera2iruntime",
    "sdk/sagemakeredge",
    "sdk/sagemakerfeaturestoreruntime",
    "sdk/sagemakergeospatial",
    "sdk/sagemakermetrics",
    "sdk/sagemakerruntime",
    "sdk/savingsplans",
    "sdk/scheduler",
    "sdk/schemas",
    "sdk/secretsmanager",
    "sdk/securityhub",
    "sdk/securityir",
    "sdk/securitylake",
    "sdk/serverlessapplicationrepository",
    "sdk/servicecatalog",
    "sdk/servicecatalogappregistry",
    "sdk/servicediscovery",
    "sdk/servicequotas",
    "sdk/ses",
    "sdk/sesv2",
    "sdk/sfn",
    "sdk/shield",
    "sdk/signer",
    "sdk/simspaceweaver",
    "sdk/sms",
    "sdk/snowball",
    "sdk/snowdevicemanagement",
    "sdk/sns",
    "sdk/socialmessaging",
    "sdk/sqs",
    "sdk/ssm",
    "sdk/ssmcontacts",
    "sdk/ssmguiconnect",
    "sdk/ssmincidents",
    "sdk/ssmquicksetup",
    "sdk/ssmsap",
    "sdk/sso",
    "sdk/ssoadmin",
    "sdk/ssooidc",
    "sdk/storagegateway",
    "sdk/sts",
    "sdk/supplychain",
    "sdk/support",
    "sdk/supportapp",
    "sdk/swf",
    "sdk/synthetics",
    "sdk/taxsettings",
    "sdk/textract",
    "sdk/timestreaminfluxdb",
    "sdk/timestreamquery",
    "sdk/timestreamwrite",
    "sdk/tnb",
    "sdk/transcribe",
    "sdk/transcribestreaming",
    "sdk/transfer",
    "sdk/translate",
    "sdk/trustedadvisor",
    "sdk/verifiedpermissions",
    "sdk/voiceid",
    "sdk/vpclattice",
    "sdk/waf",
    "sdk/wafregional",
    "sdk/wafv2",
    "sdk/wellarchitected",
    "sdk/wisdom",
    "sdk/workdocs",
    "sdk/workmail",
    "sdk/workmailmessageflow",
    "sdk/workspaces",
    "sdk/workspacesinstances",
    "sdk/workspacesthinclient",
    "sdk/workspacesweb",
    "sdk/xray"
]