[workspace]
members = [
    "apigateway","polly","secretsmanager","qldbsession","kms","kinesis","qldb","dynamodb","smithy-types","smithy-http","smithy-http-tower","protocol-test-helpers","aws-auth","aws-endpoint","aws-types","aws-hyper","aws-sig-auth","aws-http","examples/secretsmanager-helloworld","examples/polly-list-lexicons","examples/qldb-list-ledgers","examples/dynamo-helloworld","examples/polly-put-lexicon","examples/dynamo-delete-table","examples/polly-describe-voices","examples/polly-helloworld","examples/dynamo-movies","examples/kms-helloworld","examples/secretsmanager-create-secret","examples/dynamo-list-items","examples/qldbsession-helloworld","examples/dynamo-list-tables","examples/secretsmanager-get-secret-value","examples/secretsmanager-list-secrets","examples/dynamo-add-item","examples/dynamo-delete-item","examples/polly-synthesize-speech","examples/polly-generate-speech","examples/dynamo-create-table"
]