[package]
name = "apigateway-code-examples"
version = "0.1.0"
edition = "2018"
publish = false
[dependencies.aws-config]
path = "../../sdk/aws-config"
version = "0.14.0"

[dependencies.aws-sdk-apigateway]
path = "../../sdk/apigateway"
version = "0.14.0"

[dependencies.aws-smithy-types-convert]
features = ["convert-chrono"]
path = "../../sdk/aws-smithy-types-convert"
version = "0.44.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.5"
features = ["env-filter"]
