[package]
name = "applicationautoscaling-code-examples"
version = "0.1.0"
authors = ["John DiSanti <jdisanti@amazon.com>, Doug Schwartz <dougsch@amazon.com>"]
edition = "2021"
publish = false
[dependencies.aws-config]
path = "../../sdk/aws-config"
version = "0.0.0-smithy-rs-head"

[dependencies.aws-sdk-applicationautoscaling]
path = "../../sdk/applicationautoscaling"
version = "0.48.0"

[dependencies.tokio]
version = "1.20.1"
features = ["full"]

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.15"
features = ["env-filter"]
