[package]
name = "autoscaling-code-examples"
version = "0.1.0"
authors = ["Doug Schwartz <dougsch@amazon.com>"]
edition = "2021"
publish = false
[dependencies.aws-config]
path = "../../sdk/aws-config"
version = "0.54.1"

[dependencies.aws-sdk-autoscaling]
path = "../../sdk/autoscaling"
version = "0.25.0"

[dependencies.tokio]
version = "1.20.1"
features = ["full"]

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.15"
features = ["env-filter"]
