[package]
name = "custom-root-certs"
version = "0.1.0"
authors = ["rcoh@amazon.com>"]
edition = "2018"
description = "An example demonstrating setting a custom root certificate with rustls"
publish = false

[dependencies]
rustls = "0.20.2"

[dependencies.aws-config]
path = "../../sdk/aws-config"
version = "0.14.0"

[dependencies.aws-smithy-client]
path = "../../sdk/aws-smithy-client"
version = "0.44.0"

[dependencies.aws-sdk-s3]
default-features = false
path = "../../sdk/s3"
version = "0.14.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.hyper-rustls]
version = "0.23.0"
features = ["http2"]
