[package]
name = "cloudformation-code-examples"
version = "0.1.0"
authors = ["Alistair McLean <mclean@amazon.com>", "Doug Schwartz <dougsch@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { path = "../../sdk/aws-config" }
aws-sdk-cloudformation = { package = "aws-sdk-cloudformation", path = "../../sdk/cloudformation" }
aws-types = { path = "../../sdk/aws-types" }
tokio = { version = "1", features = ["full"] }
structopt = { version = "0.3", default-features = false }
tracing-subscriber = "0.2.18"
