[package]
name = "cloudwatch-code-examples"
version = "0.1.0"
authors = ["AWS Rust SDK Team <aws-sdk-rust@amazon.com>", "Russell Cohen <rcoh@amazon.com>", "Doug Schwartz <dougsch@amazon.com>"]
edition = "2018"
publish = false
[dependencies.aws-config]
path = "../../sdk/aws-config"
version = "0.14.0"

[dependencies.aws-sdk-cloudwatch]
path = "../../sdk/cloudwatch"
version = "0.14.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.5"
features = ["env-filter"]
