[package]
name = "cognitosync-code-examples"
version = "0.1.0"
authors = ["John DiSanti <jdisanti@amazon.com>", "Doug Schwartz <dougsch@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { path = "../../sdk/aws-config" }
aws-smithy-types-convert = { path = "../../sdk/aws-smithy-types-convert", features = ["convert-chrono"] }
aws-sdk-cognitosync = { package = "aws-sdk-cognitosync", path = "../../sdk/cognitosync" }
aws-types = { path = "../../sdk/aws-types" }
tokio = { version = "1", features = ["full"] }
structopt = { version = "0.3", default-features = false }
tracing-subscriber = "0.2.18"
