[package]
name = "concurrency"
version = "0.1.0"
authors = ["Zelda Hessler <zhessler@amazon.com>"]
description = "A collection of examples that demonstrate how to run AWS SDK requests concurrently. By running these\nexamples against your own AWS account, you can test how the SDK will behave when running variable numbers of requests\nwith a configurable concurrency limit. The right concurrency limit for you depends on the resources of the machine\nrunning this app, the data that's being sent in request, and the service handling your requests. Experiment with these\nexamples to find the best settings for your use case."
edition = "2021"
publish = false

[dependencies]
futures = "0.3.25"
tracing = "0.1.37"

[dependencies.clap]
version = "~4.0.26"
features = ["derive"]

[dependencies.tokio]
version = "1.20.1"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.15"
features = ["env-filter"]

[dev-dependencies]
fastrand = "1.8.0"

[dev-dependencies.aws-config]
path = "../../sdk/aws-config"
version = "0.0.0-smithy-rs-head"

[dev-dependencies.aws-sdk-s3]
path = "../../sdk/s3"
version = "0.30.0"

[dev-dependencies.aws-sdk-sqs]
path = "../../sdk/sqs"
version = "0.30.0"
