[package]
name = "dynamodb-code-examples"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>", "Doug Schwartz <dougsch@amazon.com>"]
edition = "2018"
publish = false

[dependencies]
http = "0.2.5"
rand = "0.8.3"
serde_json = "1"
tokio-stream = "0.1.8"

[dependencies.aws-config]
path = "../../sdk/aws-config"
version = "0.14.0"

[dependencies.aws-sdk-dynamodb]
path = "../../sdk/dynamodb"
version = "0.14.0"

[dependencies.aws-http]
path = "../../sdk/aws-http"
version = "0.14.0"

[dependencies.aws-smithy-client]
features = ["client-hyper", "rustls", "rt-tokio"]
path = "../../sdk/aws-smithy-client"
version = "0.44.0"

[dependencies.aws-smithy-http]
features = ["rt-tokio"]
path = "../../sdk/aws-smithy-http"
version = "0.44.0"

[dependencies.aws-smithy-types]
path = "../../sdk/aws-smithy-types"
version = "0.44.0"

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.5"
features = ["env-filter"]
