[package]
name = "dynamodb-code-examples"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>", "Doug Schwartz <dougsch@amazon.com>"]
edition = "2021"
publish = false

[dependencies]
axum = "0.5.16"
http = "0.2.5"
futures = "0.3"
log = "0.4.17"
rand = "0.8.3"
serde_json = "1"
tracing = "0.1"
thiserror = "1.0"
tokio-stream = "0.1.8"

[dependencies.aws-config]
path = "../../sdk/aws-config"
version = "0.0.0-smithy-rs-head"

[dependencies.aws-sdk-dynamodb]
path = "../../sdk/dynamodb"
version = "0.61.0"

[dependencies.aws-http]
path = "../../sdk/aws-http"
version = "0.0.0-smithy-rs-head"

[dependencies.aws-smithy-client]
features = ["client-hyper", "rustls", "rt-tokio"]
path = "../../sdk/aws-smithy-client"
version = "0.0.0-smithy-rs-head"

[dependencies.aws-smithy-http]
features = ["rt-tokio"]
path = "../../sdk/aws-smithy-http"
version = "0.0.0-smithy-rs-head"

[dependencies.aws-smithy-types]
path = "../../sdk/aws-smithy-types"
version = "0.0.0-smithy-rs-head"

[dependencies.sdk-examples-test-utils]
path = "../test-utils"
version = "0.1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_dynamo]
version = "4"
features = ["aws-sdk-dynamodb+0_22"]

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.tokio]
version = "1.20.1"
features = ["full"]

[dependencies.tower-http]
version = "0.3.0"
features = ["cors"]

[dependencies.tracing-subscriber]
version = "0.3.15"
features = ["env-filter"]
