[package]
name = "ebs-code-examples"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { path = "../../sdk/aws-config" }
aws-sdk-ebs = { package = "aws-sdk-ebs", path = "../../sdk/ebs" }
aws-sdk-ec2 = { package = "aws-sdk-ec2", path = "../../sdk/ec2" }
aws-types = { path = "../../sdk/aws-types" }
tokio = { version = "1", features = ["full"]}
base64 = "0.13.0"
sha2 = "0.9.5"
structopt = { version = "0.3", default-features = false }
tracing-subscriber = "0.2.19"
