[package]
name = "ebs-code-examples"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>", "Doug Schwartz <dougsch@amazon.com>"]
edition = "2018"
publish = false

[dependencies]
base64 = "0.13.0"
sha2 = "0.9.5"

[dependencies.aws-config]
path = "../../sdk/aws-config"
version = "0.14.0"

[dependencies.aws-sdk-ebs]
path = "../../sdk/ebs"
version = "0.14.0"

[dependencies.aws-sdk-ec2]
path = "../../sdk/ec2"
version = "0.14.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.5"
features = ["env-filter"]
