[package]
name = "eks-code-examples"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>", "Doug Schwartz <dougsch@amazon.com>"]
edition = "2021"
publish = false
[dependencies.aws-config]
path = "../../sdk/aws-config"
version = "0.52.0"

[dependencies.aws-sdk-eks]
path = "../../sdk/eks"
version = "0.22.0"

[dependencies.aws-types]
path = "../../sdk/aws-types"
version = "0.52.0"

[dependencies.tokio]
version = "1.20.1"
features = ["full"]

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.15"
features = ["env-filter"]
