[package]
name = "globalaccelerator-code-examples"
version = "0.1.0"
authors = ["Akshat Aranya <aranyaa@amazon.com>"]
edition = "2018"
publish = false

[dependencies]
tokio-stream = "0.1.8"

[dependencies.aws-config]
path = "../../sdk/aws-config"
version = "0.14.0"

[dependencies.aws-sdk-globalaccelerator]
path = "../../sdk/globalaccelerator"
version = "0.14.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.5"
features = ["env-filter"]
