[package]
name = "iam-code-examples"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { path = "../../sdk/aws-config" }
iam = { package = "aws-sdk-iam", path = "../../sdk/iam" }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.2.18"
