[[bin]]
name = "iam_getting_started"
path = "src/bin/iam-getting-started.rs"

[package]
name = "iam-code-examples"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>", "Doug Schwartz <dougsch@amazon.com"]
edition = "2018"
description = "Example usage of the IAM service"
publish = false

[lib]
name = "iam_service"
path = "src/iam-service-lib.rs"

[dependencies]
serde_json = "1"

[dependencies.aws-config]
path = "../../sdk/aws-config"
version = "0.14.0"

[dependencies.aws-sdk-iam]
path = "../../sdk/iam"
version = "0.14.0"

[dependencies.aws-sdk-s3]
path = "../../sdk/s3"
version = "0.14.0"

[dependencies.aws-sdk-sts]
path = "../../sdk/sts"
version = "0.14.0"

[dependencies.aws-hyper]
path = "../../sdk/aws-hyper"
version = "0.14.0"

[dependencies.aws-types]
features = ["hardcoded-credentials"]
path = "../../sdk/aws-types"
version = "0.14.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.5"
features = ["env-filter"]

[dependencies.uuid]
version = "0.8"
features = ["serde", "v4"]
